[build-system]
requires = ["setuptools>=45.0", "setuptools_scm[toml]>=6.3.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sysidentpy"
description = "A Python Package For System Identification Using NARMAX Models"
readme = "README.md"
requires-python = ">=3.7,<3.12"
license = { file = "LICENSE" }
keywords = [
    "data-science",
    "forecasting",
    "NARMAX",
    "NARX",
    "system-identification",
    "machine-learning",
    "time-series",
    "time-series-analysis",
    "time-series-classification",
    "time-series-regression",
]
authors = [
    { email = "wilsonrljr@outlook.com" },
    { name = "Wilson Rocha Lacerda Junior" },
]
maintainers = [
    { name = "Wilson Rocha Lacerda Junior", email = "wilsonrljr@outlook.com" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
]

dependencies = ["numpy>=1.19.2,<=1.24.3", "scipy>=1.7.0", "matplotlib>=3.3.2"]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest >=6.2.4,<7.0.0",
    "pytest-cov >=2.12.0,<4.0.0",
    "flake8 >=3.8.3,<4.0.0",
    "black == 22.3.0",
    "isort >=5.0.6,<6.0.0",
    "scikit-learn",
]
doc = [
    "mkdocs >=1.1.2,<2.0.0",
    "mkdocs-material >=8.1.4,<=9.1.11",
    "mdx-include >=1.4.1,<2.0.0",
    "mkdocs-markdownextradata-plugin >=0.1.7,<=0.2.5",
    # TODO: upgrade and enable typer-cli once it supports Click 8.x.x
    # "typer-cli >=0.0.12,<0.0.13",
    "typer >=0.4.1,<0.5.0",
    "pyyaml >=5.3.1,<7.0.0",
    "mkdocstrings[python]<=0.21.2",
    "mkdocs-redirects",
    "mkdocs-minify-plugin<=0.6.4",
    "mkdocs-glightbox <= 0.3.2",
    "mkdocs-jupyter<=0.24.1",
    # avoid jinja import error using 3.0.3 version
    "jinja2==3.0.3",
]
all = ["torch >=1.7.1"]

[project.urls]
homepage = "http://sysidentpy.org"
documentation = "http://sysidentpy.org/"
repository = "https://github.com/wilsonrljr/sysidentpy"
changelog = "https://github.com/wilsonrljr/sysidentpy/blob/master/CHANGELOG"

[tool.setuptools]
packages = ["sysidentpy"]

[tool.setuptools.dynamic]
version = { attr = "sysidentpy.__version__" }

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers", "--cov=sysidentpy"]
xfail_strict = true
junit_family = "xunit2"

[tool.coverage.paths]
source = ["sysidentpy"]

[tool.coverage.run]
source = ["sysidentpy"]
disable_warnings = ['no-data-collected']

[tool.coverage.report]
omit = [
    "sysidentpy/utils/plotting.py",
    "sysidentpy/basis_function/tests/*",
    "sysidentpy/tests/*",
    "sysidentpy/general_estimators/tests/*",
    "sysidentpy/metaheuristics/tests/*",
    "sysidentpy/metrics/tests/*",
    "sysidentpy/model_structure_selection/tests/*",
    "sysidentpy/parameter_estimation/tests/*",
    "sysidentpy/residues/tests/*",
    "sysidentpy/simulation/tests/*",
]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

[tool.black]
line-length = 88
target_version = ['py37', 'py38', 'py39', 'py310']
preview = true
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.mypy_cache
  | \.vscode
  | paper
  | examples
  | images
  | build
  | dist
  | docs/*
)/
'''
